--- a/Pfeifer_Daniel_Deep_Learning_HW2.ipynb
+++ b/Pfeifer_Daniel_Deep_Learning_HW2.ipynb
@@ -195,7 +195,7 @@
     "        \n",
     "        for i in range(epochs):\n",
     "            train_err = 0\n",
-    "            # HF2 momentum start (Part 2) (and additions for L1, L2 regularization)\n",
+    "            # HF2 start momentum (Part 2) (and additions for L1, L2 regularization)\n",
     "            # The deltas parameter is now called outside the 'propagate_backward' method.\n",
     "            # This will contain the current gradiant, plus all the previous deltas,\n",
     "            # exponentially weighted. (See the 'propagate_backward' method.)\n",
@@ -217,7 +217,7 @@
     "                # more into consideration if it appeared not too long ago.\n",
     "                for d in range(len(deltas)):\n",
     "                    deltas[d] = deltas[d] * momentum_coeff\n",
-    "            # HF2 momentum end (Part 2)\n",
+    "            # HF2 end momentum (Part 2)\n",
     "            train_err /= X_train.shape[0]\n",
     "\n",
     "            valid_err = 0\n",
